# ENCODEfetch

./: .buildinfo  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  api.html  changelog.html  cli.html  genindex.html  index.html  install.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  usage.html
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
_modules/: index.html
_modules/encodefetch/: core.html  postprocess.html
_sources/: changelog.md.txt  index.md.txt  install.md.txt  usage.md.txt
api/: index.html
assays/: index.html
changelog/: index.html
cli/: index.html
contributing/: index.html
docs/: Makefile  api.md  assays.md  changelog.md  cli.md  contributing.md  examples.md  exporters.md  index.md  installation.md  make.bat  outputs.md  quickstart.md  requirements.txt
docs/source/: api.md  cli.md  conf.py  index.md  usage.md
encodefetch/: __init__.py  cli.py  core.py  encode_client.py  postprocess.py
encodefetch/assays/: __init__.py  atacseq.py  base.py  chipseq.py  rnaseq.py
encodefetch/exporters/: __init__.py  base.py  nfcore_atacseq.py  nfcore_chipseq.py  nfcore_rnaseq.py  snakemake_atacseq.py  snakemake_chipseq.py  snakemake_rnaseq.py
examples/: demo_commands.md  encodefetch_interactive.ipynb  index.html
exporters/: index.html
gitbook/: README.md  SUMMARY.md  api-interactive.md  api.md  assays.md  changelog.md  cli.md  contributing.md  installation.md  outputs.md  quickstart.md
installation/: index.html
outputs/: index.html
quickstart/: index.html
search/: search_index.json
tests/: test_accessions.py  test_core_metadata.py  test_docs_examples.py  test_exporters.py  test_postprocess.py
